# devweek

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  proj_main.yml  pyproject.toml  render.yaml
backend/: .env.example  Dockerfile  fingerprint_integration.py  manage.py  pyproject.toml
backend/common/: views.py
backend/devweek/: celery.py  urls.py  wsgi.py
backend/devweek/settings/: base.py
backend/users/: tasks.py  views.py
backend/users/migrations/: 0001_initial.py
