[tool.poetry]
name = "devweek-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
django-environ = "^0.12.0"  # <-- Add this line

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
